# TinyTorrent

./: .gitignore  .prettierrc  AGENTS.md  AGENTS_CONTEXT.md  APACHE-2.0  LICENSE  README.md  agents.json  launch.vs.json  merge_files.ps1  package.json  rename.md  tasks.vs.json  todo-details.md
backend/: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  TODO-Refactor.md  TinyTorrent_RPC_Extended.md  build.legacy.ps1  build.ps1  make.ps1  meson.build  meson_options.txt  setup.ps1  stress.ps1  tt.ps1  vcpkg.json  verify_upgrade.py
backend/data/: connection.json  tinytorrent.dht
backend/scripts/: build.ps1  buildctl.ps1  copy_dependency.py  release-windows.ps1  setup.ps1
backend/scripts/commands/: build.ps1  clean.ps1  configure.ps1  install.ps1  package.ps1  setup.ps1  test.ps1
backend/scripts/modules/: build.ps1  clean.ps1  configure.ps1  deploy.ps1  env-detect.ps1  env.ps1  fs-safe-delete.ps1  install.ps1  log.ps1  logging.ps1  meson-config.ps1  package.ps1  safe-delete.ps1  setup.ps1  test.ps1  toolchain-bootstrap.ps1  vcpkg.ps1
backend/scripts/runners/: parallel-test-queue.ps1  parallel-test.ps1  stress-test-direct.ps1  stress-test-expert.ps1  stress-test-fast.ps1  stress-test-proof.ps1  stress-test-verified.ps1  stress-test.ps1
backend/src/: entry_console.cpp  main.cpp
backend/src/app/: DaemonMain.hpp
backend/src/application/installer/: InstallerActions.hpp  SystemInstallService.cpp  SystemInstallService.hpp
backend/src/engine/: AlertRouter.cpp  AlertRouter.hpp  AsyncTaskService.cpp  AsyncTaskService.hpp  AutomationAgent.cpp  AutomationAgent.hpp  BlocklistManager.cpp  BlocklistManager.hpp  BlocklistService.cpp  BlocklistService.hpp  ConfigurationService.cpp  ConfigurationService.hpp  Core.cpp  Core.hpp  EventBus.hpp  Events.hpp  HistoryAgent.cpp  HistoryAgent.hpp  HousekeepingService.cpp  HousekeepingService.hpp  PersistenceManager.cpp  PersistenceManager.hpp  ResumeDataService.cpp  ResumeDataService.hpp  SchedulerService.cpp  SchedulerService.hpp  SessionService.cpp  SessionService.hpp  SettingsManager.cpp  SettingsManager.hpp  SettingsPersistenceService.cpp  SettingsPersistenceService.hpp  SettingsService.cpp  SettingsService.hpp  SnapshotBuilder.cpp  SnapshotBuilder.hpp  SnapshotOrchestrator.cpp  SnapshotOrchestrator.hpp  StateService.cpp  StateService.hpp  (+3 more)
backend/src/rpc/: DialogHelpers.hpp  Dispatcher.cpp  Dispatcher.hpp  FsHooks.cpp  FsHooks.hpp  Serializer.cpp  Serializer.hpp  Server.cpp  Server.hpp  SystemHandler.hpp  UiPreferences.cpp  UiPreferences.hpp
backend/src/services/: SystemInstallService.cpp  SystemInstallService.hpp
backend/src/tray/: StringUtil.hpp  SystemInstallService.hpp  TrayState.hpp  entry_winmain.cpp
backend/src/tray/input/: WebViewInput.cpp  WebViewInput.hpp
backend/src/tray/ole/: DropTarget.cpp  DropTarget.hpp
backend/src/tray/rpc/: RpcClient.cpp  RpcClient.hpp
backend/src/utils/: Base64.hpp  Endpoint.hpp  FS.cpp  FS.hpp  Json.hpp  Log.cpp  Log.hpp  OutboundRoute.cpp  OutboundRoute.hpp  Shutdown.cpp  Shutdown.hpp  StateStore.cpp  StateStore.hpp  Version.hpp
backend/tests/: CMakeLists.txt  ConfigurationTest.cpp  CoreTest.cpp  DaemonSmokeTest.cpp  DispatcherTest.cpp  HarnessCrashSentinel.cpp  MemoryLeakTest.cpp  RpcEndpointTest.cpp  RpcFilesystemTest.cpp  RpcTestUtils.hpp  SerializerTest.cpp  UiServingTest.cpp  meson.build
docs/: EXE architecutre.md  LICENSES.md  Recovery_Documentation_Guide.md  TinyTorrent_RPC_Extended.md  TinyTorrent_RPC_Extension.md  TinyTorrent_Specification.md  UI_Invariants.md  WinAcrylicAPI.md  black_box_smoketest.md  bugs.md
docs/branding/: LICENSE  generate-icon.ps1
docs/bug fixing/: Prop Plumbing Collapse - Architecture.md  Recovery UX - code trace.md  Recovery UX — Final Acceptance Specification (Post-Implementation).md  Stabilization & Wiring of the Control Plane.md  TinyTorrent_Recovery_UX_Specification.md  architecture - review - 09-jan-2026.md  architecutre - extract useRowSelectionController.md  bug - height of row inconsisted - fixed - not sure how.md  bug reorder in queue - fixed.md  column resize animation - prompt - todo.md  column resize animation.md  fix agents prompt.md  frontend - fix consistency.md  frontend - torrent details connection.md  ideea how to improve torrent details.md  merge UI surfaces.md  opus review 1.md  persona.md  propos fixing.md  props drilling - status - checkpoint 1.md  props drilling.md  recovery automation.md  resizing cleanup.md  resume bug - to do.md  revovery_ux_prompt.md  settings - systems tab - specs.md  tabs.md  technical debts.md  token classification.md
docs/engine/: backend switchable engine.md  torrent engine swich plan.md  transmission-study.md
docs/recovery/: Recovery UX — Engineer Checklist.md  Recovery UX — Final Acceptance Specification (Post-Implementation).md  Recovery_Docs_Map.md  Recovery_Implementation_Directions.md  TinyTorrent_Recovery_UX_Specification.md
frontend/: .gitignore  AGENTS-brief-1.md  AGENTS-brief-2.md  AGENTS-full.md  AGENTS.md  ARCHITECTURE.md  CONSISTENCY_AUDIT.md  LICENSE  README.md  SET_LOCATION_TODO.md  SURFACE_CLEANUP_PLAN.md  SURFACE_COMPONENT_TREE.md  TEXT_ROLE_MIGRATION.md  TOKENIZATION_STATUS.md  TOKEN_CONTRACT.md  agents.json  forensic-tailwind-flagged.txt  forensic-tailwind-mapping-after.txt  forensic-tailwind-mapping.txt  icon-lucide-usage.json  index.html  package-lock.json  package.json  tailwind-arbitrary-audit.json  tailwind-arbitrary-diff.json  tailwind.config.ts  todo.md  tsconfig.app.json  vite.config.ts
frontend/docs/: EXE architecture.md  Recovery UX — Engineer Checklist.md  Recovery UX — Final Acceptance Specification (Post-Implementation).md  TinyTorrent_RPC_Extended.md  TinyTorrent_Recovery_UX_Specification.md  TinyTorrent_Specification.md  add torrent modal specs.md  bug report 1.md  but fix 1.md  provide a proper resume.md  single tab feature.md  ui consistency refactoring - plan1 revised.md  (+1 more)
scripts/: collect_startup_files.ps1  everything.ps1  gen-packed-fs.ps1  link-vite.js  release-windows.ps1
winui3/: mapping prompt.md
(+551 files in other folders)
